  - first dimension ('quant') in FLQuant cannot be named 'cohort'.
  - added FLCohort(array) constructor.
  - added FLCohort(missing) constructor.
  - autoParscale method for FLModel returns values for using in the parscale option
    of optim. Parameter estimation is then carried out on params/parscale which
    improves convergence.
  - parscale method for FLModel.
  - window method now accepts numeric values for the extend argument in window. Objects
    are extended along the year dimension for as many years as indicated.

BUG FIXES
  - FS#2 - FLCohort breaks for a single age quant.
  - dims(FLComp) was failing for those with less elements in @range.
  - FS#3 - Option to handle NAs in quantMeans is not implemented. Added as well for
    quantTotals and yearTotals.
  - FS#4 - Problems changing lower and upper in fmle. upper<- and lower<- now extend
    value to the required length by recycling the input vector.
  - FS#6 - Quant name of rec() is inappropriate. Value now taken from dimnames$quant.
  - FLPar(FLPar) did not handle properly all dimnames combinations.
  - plot(FLStocks) can now handle objects without @name. key and main are now turned off
    by default. Use key=TRUE to get the standard key for groups.
  - transform(FLComp) did not create correctly the necessary environment, so arguments
    on parent.frame could not be found.
  - The FLFleet example dataset, bt4, has been actualized to the new FLCatch class, where
    the catch.* slots are now substituted by methods.
  - FLPar(vector) did not use the whole input vector. Vector is now applied along all
    dimensions starting by row.
  - '[<-' for FLPar now returns the correct class if called with a derived class.
  - as.FLQuant(data.frame) was sometimes adding spaces to dimnames.
	
UTILITIES

DOCUMENTATION
  - FS#5 - The FLR citation is wrong! D'oh!. Fixed.
  - Classes man pages now include a section on Constructor and the contructor man pages were removed (EJ, 20090609)
    
DEPRECATED & DEFUNCT